--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 :root {
-  --background: #ffffff;
+  --background: #FFFCF5; 
   --foreground: #171717;
 }
 
@@ -20,7 +21,7 @@
 }
 
 body {
-  background: var(--background);
+  background-color: #FFFCF5;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
